--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,135 @@
-PyQt5>=5.15.10
-rdflib>=7.0.0
-torch>=2.1.2
-numpy>=1.24.1
-Pillow>=9.3.0
-opencv-python>=4.9.0.80
-transformers>=4.37.0
-networkx>=3.0
-openai~=1.26.0
-ultralytics
-optimum
-onnx
-timm
-requests~=2.32.3
-langchain~=0.2.7
+aiohttp==3.9.5
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.4.0
+appnope==0.1.4
+asttokens==2.4.1
+async-timeout==4.0.3
+attrs==23.2.0
+backcall==0.2.0
+beautifulsoup4==4.12.3
+bleach==6.1.0
+certifi==2024.7.4
+charset-normalizer==3.3.2
+coloredlogs==15.0.1
+contourpy==1.2.1
+cycler==0.12.1
+datasets==2.20.0
+decorator==5.1.1
+defusedxml==0.7.1
+dill==0.3.8
+distro==1.9.0
+docopt==0.6.2
+exceptiongroup==1.2.2
+executing==2.0.1
+fastjsonschema==2.20.0
+filelock==3.15.4
+fonttools==4.53.1
+frozenlist==1.4.1
+fsspec==2024.5.0
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+huggingface-hub==0.21.4
+humanfriendly==10.0
+idna==3.7
+inquirerpy==0.3.4
+ipython==8.12.3
+isodate==0.6.1
+jedi==0.19.1
+Jinja2==3.1.4
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
+kiwisolver==1.4.5
+langchain==0.2.11
+langchain-core==0.2.23
+langchain-openai==0.1.17
+langchain-text-splitters==0.2.2
+langsmith==0.1.93
+MarkupSafe==2.1.5
+matplotlib==3.9.1
+matplotlib-inline==0.1.7
+mistune==3.0.2
+mpmath==1.3.0
+multidict==6.0.5
+multiprocess==0.70.16
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+networkx==3.3
+numpy==1.26.4
+onnx==1.16.1
+openai==1.37.0
+opencv-python==4.10.0.84
+optimum==1.21.2
+orjson==3.10.6
+packaging==24.1
+pandas==2.2.2
+pandocfilters==1.5.1
+parso==0.8.4
+pexpect==4.9.0
+pfzy==0.3.4
+pickleshare==0.7.5
+pillow==10.4.0
+pipreqs==0.5.0
+platformdirs==4.2.2
+prompt_toolkit==3.0.47
+protobuf==5.27.2
+psutil==6.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+py-cpuinfo==9.0.0
+pyarrow==17.0.0
+pyarrow-hotfix==0.6
+pydantic==2.8.2
+pydantic_core==2.20.1
+Pygments==2.18.0
+pyparsing==3.1.2
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.14
+PyQt5_sip==12.15.0
+python-dateutil==2.9.0.post0
+pytz==2024.1
+PyYAML==6.0.1
+pyzmq==26.0.3
+rdflib==7.0.0
+referencing==0.35.1
+regex==2024.7.24
+requests==2.32.3
+rpds-py==0.19.1
+safetensors==0.4.3
+scipy==1.14.0
+seaborn==0.13.2
+sentencepiece==0.2.0
+six==1.16.0
+sniffio==1.3.1
+soupsieve==2.5
+SQLAlchemy==2.0.31
+stack-data==0.6.3
+sympy==1.13.1
+tenacity==8.5.0
+tiktoken==0.7.0
+timm==1.0.7
+tinycss2==1.3.0
+tokenizers==0.15.2
+torch==2.4.0
+torchvision==0.19.0
+tornado==6.4.1
+tqdm==4.66.4
+traitlets==5.14.3
+transformers==4.38.2
+typing_extensions==4.12.2
+tzdata==2024.1
+ultralytics==8.2.64
+ultralytics-thop==2.0.0
+urllib3==2.2.2
+wcwidth==0.2.13
+webencodings==0.5.1
+xxhash==3.4.1
+yarg==0.1.9
+yarl==1.9.4
