--- a/requirements.txt
+++ b/requirements.txt
@@ -64,7 +64,7 @@ nbformat==5.10.4
 networkx==3.3
 numpy==1.26.4
 onnx==1.16.1
-openai==1.37.0
+openai~=1.35.13
 opencv-python==4.10.0.84
 optimum==1.21.2
 orjson==3.10.6
@@ -133,3 +133,5 @@ webencodings==0.5.1
 xxhash==3.4.1
 yarg==0.1.9
 yarl==1.9.4
+
+python-dotenv~=1.0.1
